2009-10-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Discuss enhancements of Doxygen rules.
	* doxygen.mk: Here.

2009-10-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Handle Doxygen dependencies properly.
	Warning: doxygen.mk is no more compatible with non-GNU make.
	Please add -Wno-portability in when calling autoreconf to remove
	warning and add a note specifying that GNU make is now required.

	* doxygen.mk: Use doxygen-deps to deduce Doxygen
	generated documentation dependencies.
	* doxygen/doxygen-deps.sh: New.

2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix path in documentation upload script.
	* sf-upload.sh.in: Here.

2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Autoupdate.
	* config.guess,
	* config.sub: Update using autoreconf.

2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Enable all Autotools warnings.
	* bootstrap: Add flags to autoreconf to enable
	additional warnings.

2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Simplify autotest.at.
	* autotest.at: Simplify version updating.

2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Remove warning when Valgrind is not used.
	* autotest.at: Capture Valgrind log if possible,
	not systematically.

2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Update version in stdout file automatically.
	* autotest.at: Here.

2009-09-18  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix Doxygen HTML rendering.
	* doxygen/doxygen.css: Use JRL documentation style.
	* doxygen/footer.html: Simplify footer.

2009-09-18  Thomas Moulard  <thomas.moulard@gmail.com>

	Add scripts for maintainers from the GNU C library.
	* announce-gen: New.
	* git-version-gen: New.

2009-09-18  Thomas Moulard  <thomas.moulard@gmail.com>

	Add missing m4 file.
	* pkg.m4: New.

2009-09-18  Thomas Moulard  <thomas.moulard@gmail.com>

	Remove trailing whitespaces.
	* doxygen/doxygen.css: Here.

2009-09-18  Thomas Moulard  <thomas.moulard@gmail.com>

	Add Doxygen generation rules.